--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.14.0",
     "react-feather": "^2.0.8",
     "react-paginate": "^6.5.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^16.14.0"
   },
