--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "feather-icons": "^4.28.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.20",
     "react": "^16.14.0",
     "react-autosuggest": "^10.0.3",
     "react-dom": "^16.14.0",
     "react-feather": "^2.0.8",
     "react-paginate": "^6.5.0",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-test-renderer": "^16.14.0"
+    "react-test-renderer": "^16.14.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
