--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "feather-icons": "^4.28.0",
+    "js-guid": "^1.0.0",
     "loadash": "^1.0.0",
     "lodash": "^4.17.20",
     "react": "^16.14.0",
