--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^16.14.0",
+    "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5"
   },
   "scripts": {
